--- a/cms/css/login.css
+++ b/cms/css/login.css
@@ -1,4 +1,11 @@
-﻿/*@charset "utf-8";*/
+﻿/* 
+* @Author: xiongzaiqiren
+* @Date:   2017-11-11 18:22:35
+* @Last Modified by:   xiongzaiqiren
+* @Last Modified time: 2017-11-19 16:06:02
+*/
+
+/*@charset "utf-8";*/
 *{margin:0; padding:0;}
 *:focus{outline:none;}
 body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, dl, dt, dd, ul, ol, li, pre, form, fieldset, legend, button, input, textarea, th, td{margin:0; padding:0;}
@@ -8,7 +15,7 @@ html{width:100%; height:100%;}
 button,input,select,textarea{outline:none;}
 p{line-height:150%;word-wrap:break-word;font-size:1rem; color:#333}
 a{text-decoration:none; color:#000; blr:expression(this.onFocus=this.blur());outline:0;background:none;-webkit-tap-highlight-color:rgba(255,0,0,0);cursor: pointer;}
-a:hover{text-decoration:none;}
+a:hover,a:focus{text-decoration:none;}
 ol, ul,li{list-style:none;}
 h1, h2, h3, h4, h5, h6{ font-weight:200}
 blockquote:before, blockquote:after, q:before, q:after { content: ''; content: none; }
@@ -33,25 +40,25 @@ body {
 }
 
 @media screen and (min-width:240px) {
-.login {width: 80%;height: 80%;}
+.login {width: 80%;height: 60%;}
 }
 @media screen and (min-width:320px) {
-.login {width: 80%;height: 80%;}
+.login {width: 80%;height: 60%;}
 }
 @media screen and (min-width:380px) {
-.login {width: 80%;height: 80%;}
+.login {width: 80%;height: 60%;}
 }
 @media screen and (min-width:420px) {
-.login {width: 80%;height: 80%;}
+.login {width: 80%;height: 60%;}
 }
 @media screen and (min-width:450px) {
-.login {width: 80%;height: 80%;}
+.login {width: 80%;height: 60%;}
 }
 @media screen and (min-width:480px) {
-.login {width: 80%;height: 80%;}
+.login {width: 80%;height: 60%;}
 }
 @media screen and (min-width:640px) {
-.login {width: 80%;height: 80%;}
+.login {width: 80%;height: 60%;}
 }
 @media screen and (min-width:900px) {
 .login {width: 30%;height: 30%;}
