--- a/cms/css/login.css
+++ b/cms/css/login.css
@@ -2,7 +2,7 @@
 * @Author: xiongzaiqiren
 * @Date:   2017-11-11 18:22:35
 * @Last Modified by:   xiongzaiqiren
-* @Last Modified time: 2017-11-19 16:06:02
+* @Last Modified time: 2018-05-06 18:58:11
 */
 
 /*@charset "utf-8";*/
@@ -11,9 +11,9 @@
 body, h1, h2, h3, h4, h5, h6, hr, p, blockquote, dl, dt, dd, ul, ol, li, pre, form, fieldset, legend, button, input, textarea, th, td{margin:0; padding:0;}
 body,button,input,select,textarea{font-family:"黑体","微软雅黑","Microsoft YaHei",tahoma,arial,'Hiragino Sans GB',\5b8b\4f53,sans-serif;font-size:100%; color:#000}
 body{background:#fff; width:100%; height:100%; min-width:320px; -webkit-text-size-adjust:none;}
-html{width:100%; height:100%;}
+html{width:100%; height:100%;font-size:14px;}
 button,input,select,textarea{outline:none;}
-p{line-height:150%;word-wrap:break-word;font-size:1rem; color:#333}
+p{line-height:150%;word-wrap:break-word;font-size:100%; color:#333}
 a{text-decoration:none; color:#000; blr:expression(this.onFocus=this.blur());outline:0;background:none;-webkit-tap-highlight-color:rgba(255,0,0,0);cursor: pointer;}
 a:hover,a:focus{text-decoration:none;}
 ol, ul,li{list-style:none;}
@@ -67,17 +67,26 @@ body {
 
     .login .box-top {
         width: 100%;
-        border-top: 0.4rem solid #58b0fd;
-        -moz-border-radius: 0.8rem 0.8rem 0 0;
-        -webkit-border-radius: 0.8rem 0.8rem 0 0;
-        border-radius: 0.8rem 0.8rem 0 0;
+        padding: 5px 0px;
+        border-top: 2px solid #58b0fd;
+        -moz-border-radius: 5px 5px 0 0;
+        -webkit-border-radius: 5px 5px 0 0;
+        -ms-border-radius: 5px 5px 0 0;
+        -o-border-radius: 5px 5px 0 0;
+        border-radius: 5px 5px 0 0;
         background-color: #58b0fd;
         border-bottom: 1px solid #ecf0f1;
+
+        filter: progid:DXImageTransform.Microsoft.Shadow(color='#58b0fd', Direction=135,Strength=5);
+        /*background-color: #fff;*/
+        -moz-box-shadow: 5px 5px 20px #58b0fd;
+        -webkit-box-shadow: 5px 5px 20px #58b0fd;
+        box-shadow: 5px 5px 20px #58b0fd;
     }
         .login .box-top h1 {
             text-align: center;
             vertical-align: middle;
-            font-size: 1.3rem;
+            font-size: 18px;
             font-weight: bold;
             color: #deebf7;
         }
@@ -86,13 +95,19 @@ body {
         background-color: #58b0fd;
         text-align: center;
         padding: 5px 0 10px 0;
+
+        filter: progid:DXImageTransform.Microsoft.Shadow(color='#58b0fd', Direction=135,Strength=5);
+        /*background-color: #fff;*/
+        -moz-box-shadow: 5px 5px 20px #58b0fd;
+        -webkit-box-shadow: 5px 5px 20px #58b0fd;
+        box-shadow: 5px 5px 20px #58b0fd;
     }
     .login .box-bottom {
         width: 100%;
-        border-bottom: 0.4rem solid #58b0fd;
-        -moz-border-radius: 0 0 0.8rem 0.8rem;
-        -webkit-border-radius: 0 0 0.8rem 0.8rem;
-        border-radius: 0 0 0.8rem 0.8rem;
+        border-bottom: 10px solid #58b0fd;
+        -moz-border-radius: 0 0 5px 5px;
+        -webkit-border-radius: 0 0 5px 5px;
+        border-radius: 0 0 5px 5px;
         background-color: #dedede;
         border-top: 1px solid #ecf0f1;
 
@@ -131,13 +146,13 @@ body {
 .btn {
     display: inline-block;
     border: 1px solid;
-    -moz-border-radius: 0.3rem;
-    -webkit-border-radius: 0.3rem;
-    border-radius: 0.3rem;
-    font-size: 1rem;
-    height: 1.5rem;
-    line-height: 1.5rem;
-    padding: 0 1.5rem;
+    -moz-border-radius: 2px;
+    -webkit-border-radius: 2px;
+    border-radius: 2px;
+    font-size: 1px;
+    height: 22px;
+    line-height: 22px;
+    padding: 0 22px;
 }
 .submit {
     background-color: #A5DE37;
@@ -191,7 +206,7 @@ body {
     overflow: hidden;
     color: #999;
     text-align: center;
-    padding: 1rem 0rem;
+    padding: 1px 0px;
 }
 
     .bottom a {
